--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,18 +3,18 @@
   <p>Add a bucket.</p>
   </div>
   <div class="col">
-  <p>Your bucket list.</p>
+  <p>Your bucket list ({{itemCount}})</p>
 </div>
 </div>
 <div class="container color-light">
   <div class="col">
     <p class="sm">Use the form below to add a new bucket list goal. What do you want to do?</p>
     <form>
-      <input type="text" class="txt" name="item" placeholder="Life goals..">
-      <input type="submit" class="btn" value="Add an item">
+      <input type="text" class="txt" name="item" placeholder="Life goals.." [(ngModel)]="goalText">
+      <input type="submit" class="btn" [value]="btnText" (click)="addItem()">
     </form>
   </div>
   <div class="col">
-  <p class="life-container">I want to climb a mountain.</p>
+  <p class="life-container" *ngFor="let goal of goals">{{ goal }}</p>
 </div>
 </div>
