--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li><a routeLink="">Home</a></li>
-  <li><a routeLink="about">About</a></li>
+  <li><a routeLink="about/48">About</a></li>
 </ul>
-<app-home></app-home>
+
 <router-outlet></router-outlet>
