--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,9 @@
 <p>
   about works!<a href="" (onclick)="sendMeHome()"><strong>Take me back</strong></a>
+
+  <ul>
+    <li *ngFor='Let goal of goals'>
+      {{ goal }}
+    </li>
+  </ul>
 </p>
